--- a/style.css
+++ b/style.css
@@ -100,13 +100,16 @@
 }
 
 .container{
+
   position: relative;
-  min-height:100%;  
+  min-height:calc(100vh - 50px) ;  
 }
 
 .section1{
+  display: block;
+  position: relative;
   width: 100%;
-  height: 300px;
+  min-height: 500px;
   background-color: rgb(202, 62, 71, 30%);
 }
 
@@ -548,7 +551,6 @@
 
 .dropdown-account>.dropdown-item {
   font-size: 20px;
-  height: 30px;
   font-size: 18px;
   font-weight: normal;
   padding-left: 14px;
@@ -568,13 +570,31 @@
   display: block;
   position: absolute;
   width: 5px;
-  height: 30px;
+  height: 100%;
   left: 0px;
   background: var(--kolor-czerwony);
   margin-bottom: 30px;
 }
 
+.dropdown-account>.dropdown-item:after{
+  height: 100%;
+}
 
+.AdminPanelSketch:after{
+
+  content: "";
+  transition: all .2s cubic-bezier(0.4, 0, 0.2, 1);
+  display: block;
+  position: absolute;
+  background: url("img/adminPanelSketch1.svg") no-repeat center;
+  width: 38px;
+  background-size: 20px 20px;
+  margin-left: 138px;
+}
+.AdminPanelSketch:hover:after {
+  background: url("img/adminPanelSketch2.svg") no-repeat center;
+  background-size: 26px 26px;
+}
 
 .Myaccount:after {
   content: "";
@@ -583,7 +603,6 @@
   position: absolute;
   background: url("img/MyAccountSketch.svg") no-repeat center;
   width: 38px;
-  height: 30px;
   background-size: 20px 20px;
   margin-left: 138px;
 }
@@ -600,7 +619,6 @@
   position: absolute;
   background: url("img/settingsGear.svg") no-repeat center;
   width: 38px;
-  height: 30px;
   background-size: 20px 20px;
   margin-left: 138px;
 }
@@ -621,7 +639,6 @@
   position: absolute;
   background: url("img/LogOutSketch.svg") no-repeat center;
   width: 38px;
-  height: 30px;
   background-size: 20px 20px;
   margin-left: 138px;
 }
@@ -708,7 +725,7 @@
 
 
 .Settings__container {
-  position: absolute;
+  position: fixed;
   left: 0;
   width: 300px;
   height: 100%;
@@ -718,13 +735,16 @@
 
 .SettingsHeader__container {
   display: flex;
+  position: relative;
   width: 100%;
   height: 100px;
+  text-align: center;
+  justify-content : center;
   align-items: center;
-  justify-content: center;
+
 }
 
-.SettingsHeader {
+.SettingsHeader { 
   font-size: 36px;
   font-weight: bold;
   color: var(--kolor-czerwony);
@@ -738,7 +758,7 @@
 
 .SettingsOption {
   padding-left: 15px;
-  font-size: 24px;
+  font-size: 20px;
   line-height: 45px;
   font-weight: bold;
   cursor: pointer;
@@ -925,7 +945,9 @@ p {
 }
 
 .container-fluid {
+  position: relative;
   width: calc(100% - 30px);
+  height: 100%;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
@@ -1187,12 +1209,9 @@ select:focus {
 .footer {
   background-color: var(--kolor-czerwony);
   display: flex;
-  position: absolute;
-  bottom: 0px;
-  margin-top: auto;
   flex-wrap: wrap;
-  margin: 0px auto;
-  word-break: keep-all;
+  position: absolute;
+  bottom: 0;
 }
 
 .footer_paragraf {
@@ -1434,32 +1453,47 @@ select:focus {
 
 
 .input_submit {
+  position: relative;
+  z-index: 1;
   transition: 0.1s all ease-in;
   cursor: pointer;
   height: 70px;
-  background-color: white;
-  box-shadow: 0px 2px 2px var(--kolor-box-shadow);
   border-radius: 50px;
-  border: 2px solid var(--kolor-czerwony);
   font-size: 48px;
   text-align: center;
   line-height: 58px;
   color: var(--kolor-czerwony);
-}
-
-.input_submit:active {
-  transition: 0.1s all ease-out;
-  box-shadow: none;
-  transform: translateY(2px);
-  background-color: var(--kolor-czerwony);
-  color: white;
+  background: transparent;
 }
 
 .input_submit:hover {
-  background-color: var(--kolor-czerwony);
-  color: white;
+  color: #f2f2f2;
 
 }
+.submit:after {
+  transition: all .2s cubic-bezier(0.4, 0, 0.2, 1);
+  transform-origin: bottom;
+  display: block;
+  z-index: 0;
+  content: "";
+  position: absolute;
+  transform: scale(1,0.05);
+  width: 100%;
+  height: 70px;
+  left: 0px;
+  background: var(--kolor-czerwony);
+}
+.submit:hover:after {
+  transition: all .1s cubic-bezier(0.4, 0, 0.2, 1);
+  display: block;
+  z-index: 0;
+  content: "";
+  position: absolute;
+  transform: scale(1,1);
+  background: var(--kolor-czerwony);
+}
+
+
 
 .login,
 .email,
@@ -1981,10 +2015,6 @@ select:focus {
 
   .navbar_konto {
     margin-left: 0px;
-  }
-
-  .container-fluid {
-    margin: 0px;
   }
 
   /*----koniec pattern/wszystkie strony(navbar,footer)*/
